tests/fixtures/negative/style/DestructuringDeclarationWithTooManyEntries.kt
package style

fun example() {
    val pair = Pair(1, 2)
    val (a, b) = pair
    println("$a $b")
}
